@@ -18,6 +18,7 @@ export(baseline2eca)
 export(bootstrapOneIteration)
 export(bootstrapParallel)
 export(checkNumPSUsInStratum)
+export(closeAllProjects)
 export(closeProject)
 export(createProject)
 export(data.frame2nestedList)
@@ -36,7 +37,6 @@ export(geo2xy)
 export(getAvailableFunctions)
 export(getAvailableProjects)
 export(getBaseline)
-export(getBaselineParameterDefaults)
 export(getBaselineParameters)
 export(getBioticAssignments)
 export(getCentroid)
